--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ pp Ruby2Ruby.new.process(ast)
             </code></pre>
           </section>
           <section>
-            <h2>Workshop: yelling</h2>
+            <h2>Workshop: <a href="https://github.com/yevhene/present-inside-ruby-code/tree/master/yelling">yelling</a></h2>
           </section>
         </section>
 
@@ -223,7 +223,7 @@ local table (size: 2, argc: 1 [opts: 0, rest: -1, post: 0, block: -1, kw: -1@-1,
             </code></pre>
           </section>
           <section>
-            <h2>Workshop: bytecode</h2>
+            <h2>Workshop: <a href="https://github.com/yevhene/present-inside-ruby-code/tree/master/bytecode">bytecode</a></h2>
           </section>
           <section>
             <h2>Meet the: fiddle</h2>
@@ -270,10 +270,10 @@ World
             </code></pre>
           </section>
           <section>
-            <h2>Workshop: tail</h2>
+            <h2>Workshop: <a href="https://github.com/yevhene/present-inside-ruby-code/tree/master/tail">tail</a></h2>
           </section>
           <section>
-            <h2>Workshop: goto</h2>
+            <h2>Workshop: <a href="https://github.com/yevhene/present-inside-ruby-code/tree/master/goto">goto</a></h2>
           </section>
         </section>
 
